[tool.poetry]
name = "extpose"
version = "0.1.0"
description = ""
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.30.0"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.267"
pytest = "^7.2.2"
mypy = "^1.1.1"
types-requests = "^2.28.11.15"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=200

[tool.pylint.MASTER]
max-line-length=200