[tool.poetry]
name = "extpose"
version = "0.1.0"
description = ""
authors = [
    "James Hodgkinson <james@terminaloutcomes.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
bs4 = "^0.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
pytest = "^7.4.0"
mypy = "^1.4.0"
types-requests = "^2.31.0.1"
black = "^23.3.0"

[tool.ruff]
line-length = 200

[tool.pylint.MASTER]
max-line-length = 200

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "extpose"
description = ""
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]
